--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,11 +48,6 @@ dependencies {
     //Android Activity ViewModel  -- Generates ViewModels()
     implementation "androidx.activity:activity-ktx:1.1.0"
 
-    //Recycler View
-    implementation "androidx.recyclerview:recyclerview:1.1.0"
-    //Glide - Load Images
-    implementation 'com.github.bumptech.glide:glide:4.9.0'
-
     //Android LifeCycle
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
@@ -60,11 +55,7 @@ dependencies {
 
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.7.2'
-    implementation "com.squareup.retrofit2:adapter-rxjava2:2.7.2"
-
-    //Rx Java
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.18'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
 
     //OkHttp Client and Logger
     implementation "com.squareup.okhttp3:okhttp:3.14.7"
@@ -73,6 +64,11 @@ dependencies {
     //Gson
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.squareup.retrofit2:converter-gson:2.7.2'
+
+    // Coroutines
+    def kotlinCoroutineVersion = "1.3.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlinCoroutineVersion"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinCoroutineVersion"
 
     //Dagger Hilt
     implementation "com.google.dagger:hilt-android:$hilt_version"
