--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,10 +48,12 @@ dependencies {
     //Android Activity ViewModel  -- Generates ViewModels()
     implementation "androidx.activity:activity-ktx:1.1.0"
 
-    //Android LifeCycle
-    implementation 'android.arch.lifecycle:extensions:1.1.1'
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
-    implementation "androidx.lifecycle:lifecycle-common-java8:2.2.0"
+    //Lifecycle
+    def lifecycle_version = "2.2.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.7.2'
